<resources>
    <string name="app_name">MAD17S_PikaJump</string>

    <!--Main Activity-->
    <string name="title_game">Pikachu Jump</string>
    <string name="instruction_label">Instruction</string>
    <string name="score_label">Scores</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="leader_board_label">Leaderboard</string>
    <string name="button_label_acknowledgement">Acknowledgment</string>
    <string name="mode_easy">Easy</string>
    <string name="mode_hard">Hard</string>

    <!--Game Activity-->
    <string name="initial_score">Score: 0</string>
    <string name="initial_timer">Time Remaining: 01:00</string>
    <string name="main_menu_label">Back to Menu</string>
    <string name="pause_label">Paused</string>

    <!--Instruction-->
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="how_to_play">Time to Work Out</string>
    <string name="lift_up_info">Lift Up the Phone or real Jump to make Pikachu Jump</string>
    <string name="totalTime">Hurry up! You have 45 seconds to jump</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter: test@gmail.com</string>
    <string name="prompt_password">123456</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_Register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Leader Board-->
    <string name="leader_board_text">Top 10 Winners</string>
    <string name="score_board_text">Score Board</string>
    <string name="input_username">Please Enter Your Name:</string>
    <string name="choose_game_mode">Choose Game Mode:</string>
    <string name="button_label_sort_score">By Score</string>
    <string name="button_label_sort_fruits">By Fruit</string>
    <string name="button_label_sort_jump">By Jump</string>
    <string name="button_label_view_score">View Score</string>
    <string name="button_label_congrats">Cong</string>
    <string name="username">User</string>
    <string name="score">Score</string>
    <string name="fruits">Fruits</string>
    <string name="cokes">Cokes</string>
    <string name="date">Date</string>
    <string name="leaderboardLabel">Leaderboard</string>

    <string name ="usernameHint">Enter username</string>
    <string name="acknowledge_text">
        We cannot complete this final project without help from Dr.Adrienne H. Slaughter. \n\n
        Thanks the feedback of project presentation from classmates \n\n
        Images Source:\n
        http://www.pokestadium.com/tools/sprites \n
        https://www.pinterest.com \n\n
        Code Source:\n
        https://github.com/firebase/quickstart-android \n
        http://gamecodeschool.com/android/coding-android-sprite-sheet-animations \n
        http://stackoverflow.com \n\n
        Test Phone 1: \n
        LG LS740 (Android 4.4.2, API 19) \n
        Test Phone 2: \n
        ZTE Z831(Android 6.0.1, API 23) \n\n
        Copyright: Nintendo Co., Ltd.
    </string>
    <string name="ok_label">OK</string>

    <!--Game Report-->
    <string name="reportTitle">Game Report</string>
    <string name="recoredDateTime">DateTime: </string>
    <string name="congratulation">Excellent! You did a great job!</string>
    <string name="gameScore">Score: </string>
    <string name="totalJumps">Total Jumps: </string>
    <string name="appleEaten">Apples collected: </string>
    <string name="bananaEaten">Bananas collected: </string>
    <string name="cokeEaten">Cokes collected: </string>
    <string name="anonymous">John Doe</string>
    <string name="alertToastText">Hurry up! Only 10 Seconds Left</string>

</resources>
