<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/menu_button_padding">

    <TextView
        android:id="@+id/game_mode_textView"
        android:text="@string/choose_game_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/easy_button"
            android:text="@string/mode_easy"
            style="@style/MenuButtonStyle"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/hard_button"
            android:text="@string/mode_hard"
            style="@style/MenuButtonStyle"
            android:layout_width="wrap_content"/>
    </LinearLayout>
</LinearLayout>