<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leader_board"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.pikachujump.LeaderBoardActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_leaderboard"
        android:contentDescription="@string/leader_board_label" />

    <!--1. LEADER BOARD-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/dividerVertical"
            style="?android:buttonBarStyle">
            <TextView
                android:text="@string/leader_board_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:id="@+id/textView_leaderboard"
                android:padding="@dimen/menu_space" />

            <Button
                android:text="@string/button_label_sort_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:id="@+id/button_leader_board_sort_score"/>

            <Button
                android:text="@string/button_label_sort_jump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/orange_color"
                android:textStyle="bold"
                android:id="@+id/button_leader_board_sort_jump"/>
        </LinearLayout>

        <ListView
        android:id="@+id/leaderBoard_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
</FrameLayout>
